--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "mongodb": "^3.6.6",
+    "mongodb-client-encryption": "^1.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^3.3.2",
