--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
     "clipboard-copy": "^4.0.1",
+    "firebase": "^8.6.1",
     "mongodb": "^3.6.6",
     "mongodb-client-encryption": "^1.2.3",
     "mongoose": "^5.12.7",
