--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mongodb-client-encryption": "^1.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-confirm-alert": "^2.7.0",
     "react-custom-share": "^0.4.8",
     "react-dom": "^17.0.2",
