--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-custom-share": "^0.4.8",
     "react-dom": "^17.0.2",
     "react-easy-crop": "^3.3.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-google-login": "^5.2.2",
     "react-icons": "^4.2.0",
     "react-notifications": "^1.7.2",
