--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-progressbar": "^15.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "unirest": "^0.6.0",
     "web-vitals": "^1.1.1",
     "yum": "^0.1.1"
   },
@@ -33,9 +34,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
