--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-progressbar": "^15.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.9.0",
     "unirest": "^0.6.0",
     "web-vitals": "^1.1.1",
     "yum": "^0.1.1"
