--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "react-icons": "^5.2.1",
     "react-markdown": "^9.0.1",
     "three": "^0.164.1",
-    "tls": "^0.0.1"
+    "tls": "^0.0.1",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
